# packing-report-app

./: .gitignore  .lintstagedrc.json  README.md  package.json  plan.md  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml
.husky/: commit-msg  pre-commit
apps/api/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: main.py
apps/api/app/core/: config.py  database.py  exceptions.py  logging.py  security.py
apps/api/app/models/: __init__.py  base.py  bet.py  bookmaker.py  event.py  game.py  league.py  market.py  market_outcome.py  odds_snapshot.py  sport.py  team.py  user.py
apps/api/app/modules/analytics/: router.py  schemas.py  service.py
apps/api/app/modules/auth/: router.py  schemas.py  service.py
apps/api/app/modules/bets/: router.py  schemas.py  service.py
apps/api/app/modules/games/: router.py  schemas.py  service.py
apps/api/app/modules/odds/: client.py  ingestion.py  router.py  schemas.py  tasks.py  worker.py
apps/api/app/scripts/: seed.py  seed_games.py
apps/web/: Dockerfile  Dockerfile.dev  eslint.config.mjs  package.json  tsconfig.tsbuildinfo
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/analytics/: page.tsx
apps/web/src/app/(dashboard)/bets/: page.tsx
apps/web/src/app/(dashboard)/odds/: page.tsx
apps/web/src/app/(dashboard)/profile/: page.tsx
apps/web/src/lib/: api-client.ts
infra/: .env.example  docker-compose.prod.yml  docker-compose.yml
