[project]
name = "packing-report-api"
version = "0.1.0"
description = "Packing Report App — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic[email]>=2.13,<3",
    "pydantic-settings>=2.7,<3",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7,<2",
    "bcrypt>=4.0,<4.1",
    "httpx>=0.28,<1",
    "arq>=0.27,<1",
    "slowapi>=0.1.9,<1",
    "structlog>=25.1,<26",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6,<7",
    "testcontainers>=4,<5",
    "ruff>=0.11,<1",
    "mypy>=1.15,<2",
    "coverage>=7,<8",
]

[tool.ruff.lint]
per-file-ignores = {"app/models/*" = ["F821"]}

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
files = ["app/"]
[[tool.mypy.overrides]]
module = "app.models.*"
ignore_errors = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
